# buckeye_ser

./: Makefile  README.md  environment.yml  pyproject.toml
buckeye_ser/: __init__.py  dataset.py  features.py  plots.py
buckeye_ser/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/preprocess_buckeye/: 0.0 Wrangle Buckeye Recordings.ipynb
