[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "buckeye_ser"
version = "0.0.1"
description = "Clean version of buckeye speech emotion recognition related analyses."
authors = [
  { name = "Jeffrey Xing" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["buckeye_ser"]
include = ["pyproject.toml", "buckeye_ser/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["buckeye_ser"]
force-sort-within-sections = true

